--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "passport": "^0.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   }
